feat: use throttlrPath instead of ID for ergonomics
