# docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/delete/{apiKey}": {
+        "/delete/{throttlrPath}": {
             "post": {
                 "security": [
                     {
@@ -29,14 +29,21 @@
                 "summary": "Delete endpoint",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Endpoint ID",
-                        "name": "id",
-                        "in": "query",
+                        "type": "string",
+                        "description": "Throttlr path",
+                        "name": "throttlrPath",
+                        "in": "path",
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "Deleted",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/endpoints/{throttlrPath}": {
@@ -103,7 +110,7 @@
                 "responses": {}
             }
         },
-        "/register/{apiKey}": {
+        "/register": {
             "post": {
                 "security": [
                     {
@@ -152,10 +159,17 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
-        "/update/{apiKey}": {
+        "/update/{throttlrPath}": {
             "post": {
                 "security": [
                     {
@@ -177,15 +191,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Endpoint to register",
+                        "description": "Updated endpoint",
                         "name": "endpoint",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Endpoint ID",
-                        "name": "endpoint_id",
                         "in": "formData",
                         "required": true
                     },
@@ -209,9 +216,23 @@
                         "name": "max",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Throttlr path",
+                        "name": "throttlrPath",
+                        "in": "path",
+                        "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         }
     },
